--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
         "api/index.php": { "runtime": "vercel-php@0.7.3" }
     },
     "routes": [
-        { "src": "/build/(.*)", "dest": "/(1)" },
+        { "handle": "filesystem" },
         { "src": "/(.*)", "dest": "/api/index.php" }
     ],
     "public": true,
