--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,14 @@
             "dest": "/css/$1"
         },
         {
+            "src": "/js/(.*)",
+            "dest": "/js/$1"
+        },
+        {
+            "src": "/favicon.ico",
+            "dest": "/favicon.ico"
+        },
+        {
             "src": "/(.*)",
             "dest": "/api/index.php"
         }
